--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cmake.configureOnOpen": true,
     "files.associations": {
-        "table_generator.h": "c"
+        "table_generator.h": "c",
+        "util.h": "c"
     }
 }
